--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-list-endpoints": "^6.0.0",
+    "express-validator": "^6.12.2",
     "http-errors": "^1.8.0",
-    "mongoose": "^6.0.9"
+    "mongoose": "^6.0.9",
+    "query-to-mongo": "^0.10.1"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
